# personal_site

./: .env  .gitignore  Cargo.toml  README.md  disdamoe.me  disdamor.me  index.js  index.js.map  index.ts  package-lock.json  run.nu
PersonalSiteNode/: .gitignore  package-lock.json  package.json
PersonalSiteNode/oldScripts/: tokenizer.mjs
PersonalSiteNode/public/: Coding.html  Music.html
Site/Pages/: Coding.cshtml.cs  Games.cshtml  Games.cshtml.cs  Music.cshtml  Music.cshtml.cs  index.cshtml  index.cshtml.cs
Site/Properties/: launchSettings.json
anubis/: disdamor.me.env
asp.netPersonalSite/: Site.sln
asp.netPersonalSite/Site/: Site.csproj
astro/: .gitignore  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
astro/src/: styles.scss
commands_specific/: astro.nu  codium.nu  ls_all.cmd  python.nu
content/: config.ts
content/art/: .example.json  01-do.json  05-internal.json  06-hold.json  07-hynosis.json  08-steps.json  09-road.json  10-lost.json  11-question.json  13-unknown.json  14-equus.json
content/languages/: csharp.json
content/music/: .example.json  01-happening.json  (+4 more)
model/: main.py
model_python/: README.md  commands.cmd  commands.nu  main.py  requirements.txt
nginx/: disdamor.me  upstream-anubis.conf
oldScripts/: statsMain.js  workerModel.js
personal_site/: README.md  build.rs  server_build.cmd  transpile.sh  tsconfig-system.json  tsconfig.json
public/: Games.html  Stats.html  index.html
resize/: Cargo.toml  README.md
src/: auth.rs  dist.rs  main.rs  private.rs  regexes.yaml  stat.rs
words/: nouns.txt
(+189 files in other folders)
