[package]
name = "personal_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
user-agent-parser = {version = "0.3.4", features = ["rocket"]}
rust-bert = {git = "https://github.com/guillaume-be/rust-bert.git", features = ["download-libtorch"]}
