[package]
name = "personal_site"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = {version = "4.11.0", features=["rustls"]}
anyhow = "1.0.93"
dotenv = "0.15.0"
getrandom = "0.2.15"
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
zmq = "0.10.0"
